Fixed links and tweaked the top of the page a bit

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
   <div class="container">
       <div class="header-content">
       <img src="/clinic27.webp"/>
-      <PrimaryButton text="Give Us a Call (02) 8059 7743" />
+      <PrimaryButton text="Give Us a Call (02) 8059 7743" href="tel:0280597743" />
     </div>
   </div>
 </header>
