--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,7 +18,7 @@ import Ratings from "./reusable/Ratings.astro";
         <li>• Long-term solution to pain and discomfort with Advanced Biostructural Correction</li>
       </ul>
 
-      <a  class="cta-button">
+      <a href="tel:0280597743" target="_blank" class="cta-button">
         Call Us to Take the First Step
       </a>
     </div>
@@ -52,10 +52,9 @@ import Ratings from "./reusable/Ratings.astro";
   }
 
   h1 {
-    font-size: 2rem;
-    line-height: 45px;
+    font-size: 2.3rem;
     margin-bottom: 2rem;
-    font-weight: 700;
+    font-weight: 800;
   }
 
   .features {
@@ -64,7 +63,7 @@ import Ratings from "./reusable/Ratings.astro";
   }
 
   .features li {
-    margin-bottom: 1rem;
+    margin-bottom: 0.6rem;
     font-size: 1rem;
   }
 
@@ -78,10 +77,14 @@ import Ratings from "./reusable/Ratings.astro";
     font-weight: 600;
     font-size: 1rem;
     transition: background-color 0.3s ease;
+    width: 40%;
+    text-align: center;
   }
 
   .cta-button:hover {
-    background: #1a237e;
+    background: #10164f;
+    cursor: pointer;
+
   }
 
   @media (max-width: 768px) {
