--- a/src/components/WhatElseWeOffer.astro
+++ b/src/components/WhatElseWeOffer.astro
@@ -29,7 +29,7 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
         </div>
     </div>
     <div style="display: flex; justify-content: center; margin:0 auto; margin-top: 2rem;">
-        <PrimaryButton text="Call us at (02) 9267 3333" />
+        <PrimaryButton text="Call us at (02) 9267 3333" href="tel:0292673333" />
     </div>
 
 </section>
