--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,7 +47,7 @@ const { title } = Astro.props;
 			}
 
 			.container {
-				max-width: 1000px;
+				max-width: 60%;
 				margin: 0 auto;
 				padding: 1rem 1rem;
 			}
