--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
         <p style="color: white; font-size: 1.2rem; font-weight: 500; width: 30%; text-align: center;    ">Get in touch with us and find out why
             so many patients stay with us for years
             (and even decades!)</p>
-            <PrimaryButton text="Call us to book an appointment" />
+            <PrimaryButton text="Call us to book an appointment" href="tel:0280597743" />
     </div>
 </footer>
 <style>
