--- a/src/components/SalesPitch.astro
+++ b/src/components/SalesPitch.astro
@@ -13,7 +13,7 @@ import UnderlineHeader from './reusable/UnderlineHeader.astro';
         </div>
         <YoutubeVideo videoId="n2hiC9-gGTI" fullWidth />
     </div>
-    <PrimaryButton text="Book an appointment" />
+    <PrimaryButton text="Get in touch with the experts" href="tel:0280597743" />
     <div style="display:grid; grid-template-columns: 1fr 1fr; grid-template-rows: auto auto auto; gap: 2rem; max-width: 60%; margin: 3rem 0rem;">
         <ParagraphWithHeader header="Chronic Pain Relief" text="Chronic pain, whether it affects the feet, knees, legs, lower back, arms, or neck, can be effectively managed through targeted treatments. You can experience relief not only from old injuries and traumas but also from stress, aches, and tension caused by daily life." />
         <ParagraphWithHeader header="Achieving Overall Health Goals" text="Incorporating chiropractic care as part of a holistic approach can help you maintain balance, mobility, and overall health. Regular treatments support your body's natural ability to function optimally, ensuring ongoing wellness and helping achieve long-term health goals." />
@@ -21,7 +21,7 @@ import UnderlineHeader from './reusable/UnderlineHeader.astro';
         <ParagraphWithHeader header="EndoNasal Cranial Correction" text="While ECC™ is a well-known effective method for helping bring the body back into proper alignment, it should only be applied by experienced chiropractors. Even your posture and the symmetry of your face and head can benefit from this treatment." />
         <ParagraphWithHeader header="Headaches and Vertigo" text="If you experience headaches and vertigo, you can reduce dizziness, pain, and discomfort with our chiropractic care. Our patients quickly notice an overall increase in their sense of well-being and body confidence, enjoying improved balance and comfort." />
         <div style="display:flex; justify-content: flex-end; align-items: flex-end;">
-            <PrimaryButton text="Call Us to Start Your Wellness Journey" />
+            <PrimaryButton text="Call Us to Start Your Wellness Journey" href="tel:0280597743" />
         </div>
     </div>
     <UnderlineHeader text="How we are different?" />
@@ -34,7 +34,7 @@ import UnderlineHeader from './reusable/UnderlineHeader.astro';
         <div style="width: 100%; height: 100%; display:flex; flex-direction: column; gap: 2rem;">
             <YoutubeVideo videoId="XvYeHDnvfPw" fullWidth />
             <div style="width:100%;display:flex; justify-content: center; align-items: center;">
-                <PrimaryButton text="Call us to book an appointment" />
+                <PrimaryButton text="Call us to book an appointment" href="tel:0280597743" />
             </div>
         </div>
     </div>
