--- a/src/components/reusable/BookAnAppotiment.astro
+++ b/src/components/reusable/BookAnAppotiment.astro
@@ -6,11 +6,12 @@
         <h1>Book an appointment</h1>    
     </div>
     <div class="button-container">
-        <button class="existing-client">I AM AN EXISTING CLIENT</button>
-        <button class="new-client">I AM A NEW CLIENT</button>
+        <a href="tel:0280597743" target="_blank" class="existing-client">I AM AN EXISTING CLIENT</a>
+        <a href="tel:0280597743" target="_blank" class="new-client">I AM A NEW CLIENT</a>
     </div>
 </div>
 <style>
+
     .book-an-appointment-container{
         padding: 1rem 0;
         text-align: center;
@@ -42,7 +43,7 @@
         gap: 1rem;
         margin-top: 0.5rem;
     }
-    button{
+    a{
         background-color: white;
         color: var(--purple);
         padding: 0.5rem 1rem;
@@ -52,8 +53,9 @@
         font-weight: 600;
         cursor: pointer;
         transition: background-color 0.3s;
+        text-decoration: none;
     }
-    button:hover {
+    a:hover {
         background-color: var(--purple);
         color: white;
     }
