--- a/src/components/reusable/Ratings.astro
+++ b/src/components/reusable/Ratings.astro
@@ -4,42 +4,37 @@ interface Props {
 }
 
 const { blackText = false }: Props = Astro.props;
+const reviewLink = "https://www.google.com/search?sca_esv=98a71f72e401179b&sxsrf=AHTn8zpM1Qih6cq4PFmdG5xd9ZpFu-uh7A:1742290584343&si=APYL9bs7Hg2KMLB-4tSoTdxuOx8BdRvHbByC_AuVpNyh0x2KzZ-B0pwvte_rIE4_4gS94q42hUy3UyrKuF0wh7o_btiAYDCWwr63ZjoWlMiEjwZCf-74UTjg2O8QyMGwCZ8HlwViuNBA&q=Clinic+27+Reviews&sa=X&ved=2ahUKEwjQ8P-aqpOMAxWp9wIHHdy4Db4Q0bkNegQINBAE&biw=2560&bih=963";
 ---
 <div class="rating" style={blackText ? "color: black;" : "color: white;"}>
     <img src="/google.png" alt="Google" class="google-logo" />
     <div class="rating-content">
         <div class="rating-stars">
-          <span class="rating-number">4.9</span>
+          <span class="rating-number" style={"font-weight: 900;"}>4.9</span>
           <div class="stars">★★★★★</div>
         </div>
-        <a href="#reviews" class="review-link" style={blackText ? "color: black;" : "color: white;"}>Read our 173 reviews</a>
+        <a href={reviewLink} class="review-link" style={blackText ? "color: black;" : "color: white;"}>Read our 173 reviews</a>
     </div>
 </div>
 <style>
     img{
         width: 48px;
         height: 48px;
-        object-fit: cover;
+        object-fit: contain;
     }
 
-      .rating {
+    .rating {
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-bottom: 2rem;
-    gap: 1rem;
-  }
-
-  .google-logo {
-    width: 24px;
-    height: 24px;
-    object-fit: contain;
+    gap: 0.5rem;
   }
 
   .rating-content {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 0.2rem;
   }
 
   .rating-stars {
@@ -50,7 +45,7 @@ const { blackText = false }: Props = Astro.props;
 
   .rating-number {
     font-size: 1rem;
-    font-weight: 700;
+    font-weight: 900;
   }
 
   .stars {
@@ -60,5 +55,7 @@ const { blackText = false }: Props = Astro.props;
 
   .review-link {
     text-decoration: underline;
+    font-size: 0.8rem;
+    font-weight: 600;
   }
 </style>
