Optimized images and added new ones

--- a/src/components/Credentials.astro
+++ b/src/components/Credentials.astro
@@ -2,11 +2,15 @@
 import UnderlineHeader from './reusable/UnderlineHeader.astro';
 import YoutubeVideo from './reusable/YoutubeVideo.astro';
 import BookAnAppotiment from './reusable/BookAnAppotiment.astro';
+import ahmLogo from '/public/logo/ahm.png';
+import medibankLogo from '/public/logo/medibank.png.webp';
+import asrLogo from '/public/logo/asr-logo.png';
+import { Image } from 'astro:assets';
 
 const images = [
-    "/ahm.png",
-    "/medibank.png.webp",
-    "/asr-logo.png",
+    ahmLogo,
+    medibankLogo,
+    asrLogo,
 ]
 ---
 <section class="credentials container">
@@ -14,7 +18,7 @@ const images = [
     <div class="credentials-container">
         {images.map((image) => (
             <div class="credentials-item">
-                <img src={image} />
+                <Image src={image} alt="Chiropractic Credentials" loading="eager" />
             </div>
         ))}
     </div>
