--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
     <div class="footer-container">
         <div class="logo-circle">
         </div>
-        <p style="color: white; font-size: 1.2rem; font-weight: 500; width: 30%; text-align: center;    ">Get in touch with us and find out why
+        <p style="color: white; font-size: 1.2rem; font-weight: 600; width: 30%; text-align: center;    ">Get in touch with us and find out why
             so many patients stay with us for years
             (and even decades!)</p>
             <PrimaryButton text="Call us to book an appointment" href="tel:0280597743" />
@@ -13,7 +13,7 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
 </footer>
 <style>
     .footer-container{
-        background-image: url('//d9hhrg4mnvzow.cloudfront.net/book.sydneychiropractorcbd.com.au/0a6ae1ba-footer_1000000000000000000028.png');
+        background-image: url('/footer_bg.png');
         background-size: cover;
         background-position: center;
         display: flex;
