--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,7 +29,7 @@ import Ratings from "./reusable/Ratings.astro";
   .hero {
     position: relative;
     min-height: 20vh;
-    background-image: url("https://d9hhrg4mnvzow.cloudfront.net/book.sydneychiropractorcbd.com.au/bcd5ad07-shutterstock-1793070016-1_1000000000000000000028.png");
+    background-image: url("/hero_bg.png");
     background-size: cover;
     background-position: center;
     color: white;
