--- a/src/components/MainSection/Team.astro
+++ b/src/components/MainSection/Team.astro
@@ -2,11 +2,15 @@
 import UnderlineHeader from "../reusable/UnderlineHeader.astro";
 import TeamPerson from "./TeamPerson.astro";
 import TeamPersonMore from "./TeamPersonMore.astro";
+import { Image } from 'astro:assets';
+import dr1 from '/public/avatars/doctors/dr1.png';
+import dr2 from '/public/avatars/doctors/dr2.png';
+import dr3 from '/public/avatars/doctors/dr3.png';
 interface TeamPerson {
     name: string;
     role: string;
     about: string[];
-    image: string;
+    image: any;
 }
 
 const team: TeamPerson[] = [
@@ -14,19 +18,19 @@ const team: TeamPerson[] = [
         name: "Dr. Hooman Zahedi",
         role: "Chiropractor",
         about: ["After qualifying as a chiropractor at Macquarie University, Hooman travelled to the UK. Along with a few other chiropractors, he pioneered chiropractic treatment in Scotland and went on to become the Director of Chiropractic Care and a partner in Europe’s largest chiropractic group, comprising 21 practices.","When he returned to Australia he became a Founding Board member of Advanced Biostructural Correction Australasia, a unique chiropractic technique."],
-        image: "/dr1.png"
+        image: dr1
     },
     {
         name: "Dr. Rebecca Squire",
         role: "Chiropractor",
         about: ["Rebecca cherishes the opportunity to help you enhance your health. By relieving your pain and stiffness, she enables you to sleep better and live a more active, fulfilling life. She enjoys giving health and wellness talks and appreciates the opportunity to share with you how to sleep, stand and sit without straining your body.","Completing the Master of Chiropractic at Macquarie University gave her the skills and experience to help dancers prevent injuries and recover from them once they have occurred."],
-        image: "/dr2.png"
+        image: dr2
     },
     {
         name: "Dr. Angus Phelps",
         role: "Chiropractor",
         about:["Angus enjoys managing musculoskeletal conditions and improving athletic performance, but also recognises the power of Chiropractic in providing a foundation for good health, both physically and mentally. He offers a pro-active style of healthcare and believes in preventative chiropractic care. He tailors your treatment plan, helping you make informed decisions about your health so you can realise your physical and mental potential.","As a graduate of Macquarie University’s Master of Chiropractic, he is deeply committed to lifelong learning and continual professional development, enabling him to offer you expert chiropractic care."],
-        image: "/dr3.png"
+        image: dr3
     }
 ]
 ---
