--- a/src/components/reusable/Ratings.astro
+++ b/src/components/reusable/Ratings.astro
@@ -1,4 +1,7 @@
 ---
+import { Image } from 'astro:assets';
+import googleLogo from '/public/logo/google.png';
+
 interface Props {
     blackText?: boolean;
 }
@@ -7,7 +10,7 @@ const { blackText = false }: Props = Astro.props;
 const reviewLink = "https://www.google.com/search?sca_esv=98a71f72e401179b&sxsrf=AHTn8zpM1Qih6cq4PFmdG5xd9ZpFu-uh7A:1742290584343&si=APYL9bs7Hg2KMLB-4tSoTdxuOx8BdRvHbByC_AuVpNyh0x2KzZ-B0pwvte_rIE4_4gS94q42hUy3UyrKuF0wh7o_btiAYDCWwr63ZjoWlMiEjwZCf-74UTjg2O8QyMGwCZ8HlwViuNBA&q=Clinic+27+Reviews&sa=X&ved=2ahUKEwjQ8P-aqpOMAxWp9wIHHdy4Db4Q0bkNegQINBAE&biw=2560&bih=963";
 ---
 <div class="rating" style={blackText ? "color: black;" : "color: white;"}>
-    <img src="/google.png" alt="Google" class="google-logo" />
+    <Image src={googleLogo} alt="Google" class="google-logo" loading="eager" />
     <div class="rating-content">
         <div class="rating-stars">
           <span class="rating-number" style={"font-weight: 900;"}>4.9</span>
