--- a/src/components/Credentials.astro
+++ b/src/components/Credentials.astro
@@ -13,7 +13,7 @@ const images = [
     asrLogo,
 ]
 ---
-<section class="credentials container">
+<section class="credentials">
     <UnderlineHeader text="Chiropractic credentials and accreditations" />
     <div class="credentials-container">
         {images.map((image) => (
@@ -23,10 +23,22 @@ const images = [
         ))}
     </div>
     <UnderlineHeader text="Better Results, Faster." />
-    <YoutubeVideo videoId="GrDl-8HyGBY"/>
-    <BookAnAppotiment />
+    <div class="video-container">
+        <YoutubeVideo videoId="GrDl-8HyGBY" fullWidth={true}/>
+    </div>
+    <div class="book-an-appointment-container">
+        <BookAnAppotiment />
+    </div>
 </section>
 <style>
+    .credentials{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+        width: 100%;
+    }
     .credentials-container{
         display: flex;
         flex-direction: row;
@@ -39,5 +51,22 @@ const images = [
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .video-container{
+        width: 60%;
+    }
+    @media (max-width: 480px) {
+        .credentials-item img{
+            width: 60%;
+            height: 60%;
+            object-fit: contain;
+        }
+        .video-container{
+            width: 80%;
+        }
+        .book-an-appointment-container{
+            width: 60%;
+        }
     }
 </style>
