--- a/src/components/FAQ/FAQ.astro
+++ b/src/components/FAQ/FAQ.astro
@@ -124,4 +124,20 @@ const faqItems: FAQItem[] = [
     .faq-container-right {
         width: 50%;
     }
+
+    @media (max-width: 480px) {
+        .faq-container {
+            flex-direction: column;
+            gap:0rem;
+        }
+        .faq-container-left {
+            width: 100%;
+        }
+        .faq-container-right {
+            width: 100%;
+        }
+        
+        
+        
+    }
 </style>
