--- a/src/components/FAQ/FAQItem.astro
+++ b/src/components/FAQ/FAQItem.astro
@@ -48,4 +48,14 @@ const { question, answer } = Astro.props;
         color: var(--primary-pink);
         font-size: 0.8rem;
     }
+
+    @media (max-width: 480px) {
+        .faq-item{
+            margin-bottom: 0.5rem;
+            width: 100%;
+        }
+        .faq-item h3{
+            font-size: 0.9rem;
+        }
+    }
 </style>
