--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,10 +5,14 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
     <div class="footer-container">
         <div class="logo-circle">
         </div>
-        <p style="color: white; font-size: 1.2rem; font-weight: 600; width: 30%; text-align: center;    ">Get in touch with us and find out why
+        <p class="footer-text">
+            Get in touch with us and find out why
             so many patients stay with us for years
-            (and even decades!)</p>
-            <PrimaryButton text="Call us to book an appointment" href="tel:0280597743" />
+            (and even decades!)
+        </p>
+        <div class="footer-button-container">
+            <PrimaryButton text="Call us today" href="tel:0280597743" centerText={true} />
+        </div>
     </div>
 </footer>
 <style>
@@ -22,5 +26,26 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
         align-items: center;
         gap:5rem;
         height: 60vh;
+    }   
+    .footer-text{
+        width: 30%;
+        color: white;
+        font-size: 1.2rem;
+        font-weight: 600;
+        text-align: center;    
+    }
+
+    @media (max-width: 480px) {
+        .logo-circle{
+            width: 100px;
+            height: 100px;
+        }
+        .footer-container{
+            height: 35vh;
+        }
+        .footer-text{
+            width: 80%;
+            font-size: 1rem;
+        }
     }
 </style>
