--- a/src/components/MainSection/Reviews.astro
+++ b/src/components/MainSection/Reviews.astro
@@ -70,4 +70,14 @@ import jessicaAvatar from '/public/avatars/review/jes.png';
       grid-template-columns: 1fr;
     }
   }
+
+  @media (max-width: 480px) {
+    .reviews-grid {
+      grid-template-columns: 1fr;
+    }
+    .reviews-container {
+      max-width: 80%;
+      margin-bottom: 2rem;
+    }
+  }
 </style> 
