--- a/src/components/reusable/UnderlineHeader.astro
+++ b/src/components/reusable/UnderlineHeader.astro
@@ -31,4 +31,14 @@ const { text } = Astro.props;
         margin-bottom: 1.5rem;
         margin-top: 0.5rem;
     }
+
+    @media (max-width: 480px) {
+        .underline-header {
+            font-size: 1.1rem;
+        }
+        .underline {
+            width: 20%;
+            margin-bottom: 0.5rem;
+        }
+    }
 </style>
