--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,9 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
   <div class="container">
       <div class="header-content">
       <Image src={clinicLogo} alt="Clinic Logo" loading="eager"/>
-      <PrimaryButton text="Give Us a Call (02) 8059 7743" href="tel:0280597743" />
+      <div class="header-button-container">
+        <PrimaryButton text="Give Us a Call (02) 8059 7743" href="tel:0280597743" />
+      </div>
     </div>
   </div>
 </header>
@@ -15,7 +17,9 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
 <style>
   .header {
     background: white;
+    width: 100%;
   }
+
 
   img{
     width: 100px;
@@ -26,52 +30,19 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
   }
 
-  .logo {
-    text-decoration: none;
-  }
-
-  .logo-circle {
-    background: var(--primary-blue);
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    text-align: center;
-  }
-
-  .clinic {
-    font-size: 1rem;
-    font-weight: 500;
-  }
-
-  .number {
-    font-size: 1.5rem;
-    font-weight: 700;
-  }
-
-  @media (max-width: 768px) {
-    .logo-circle {
-      width: 60px;
-      height: 60px;
+  @media (max-width: 480px) {
+    .header-content {
+      flex-direction: column;
+      gap: 1rem;
+      width: 100%;
+      padding: 1rem 1rem;
     }
-
-    .clinic {
-      font-size: 0.8rem;
-    }
-
-    .number {
-      font-size: 1.2rem;
-    }
-
-    .call-button {
-      font-size: 0.9rem;
-      padding: 0.5rem 1rem;
+    img{
+      width: 80px;
+      height: 80px;
     }
   }
 </style> 
