--- a/src/components/MainSection/Team.astro
+++ b/src/components/MainSection/Team.astro
@@ -35,7 +35,9 @@ const team: TeamPerson[] = [
 ]
 ---
 <section class="team">
-    <UnderlineHeader text="Your Dedicated Team" />
+    <div class="team-container-header">
+        <UnderlineHeader text="Your Dedicated Team" />
+    </div>
     <div class="team-container">
         {team.map((person) => (
             <TeamPerson person={person} />
@@ -54,6 +56,7 @@ const team: TeamPerson[] = [
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 2rem;
     }
     .team-container {
         display: flex;
@@ -66,5 +69,24 @@ const team: TeamPerson[] = [
     .team-more-container {
         margin: 1.5rem auto;
         width: 60%;
+    }
+
+    @media (max-width: 480px) {
+        .team{
+            width: 100%;
+        }
+        .team-container {
+            width: 100%;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+        }
+        .team-container-header {
+            width: 100%;
+            text-align: center;
+        }
+        
+        
     }
 </style>
