--- a/src/components/reusable/BookAnAppotiment.astro
+++ b/src/components/reusable/BookAnAppotiment.astro
@@ -5,7 +5,7 @@ import personAvatar from '/public/avatars/person.png';
 <div class="book-an-appointment-container">
     <div class="book-an-appointment-header">
         <Image src={personAvatar} alt="person" />
-        <h1>Book an appointment</h1>    
+        <h1>Book an Appointment</h1>    
     </div>
     <div class="button-container">
         <a href="tel:0280597743" target="_blank" class="existing-client">I AM AN EXISTING CLIENT</a>
@@ -60,5 +60,25 @@ import personAvatar from '/public/avatars/person.png';
     a:hover {
         background-color: var(--purple);
         color: white;
+    }
+
+    @media (max-width: 480px) {
+        .book-an-appointment-header img{
+            width: 20%;
+            height: 20%;
+        }
+        .book-an-appointment-header h1{
+            font-size: 1.2rem;
+        }
+        .button-container{
+            width: 100%;
+            justify-content: space-between;
+        }
+
+        a{
+            font-size: 0.6rem;
+            padding: 0.5rem;
+        }
+        
     }
 </style>
