--- a/src/components/reusable/Ratings.astro
+++ b/src/components/reusable/Ratings.astro
@@ -16,7 +16,7 @@ const reviewLink = "https://www.google.com/search?sca_esv=98a71f72e401179b&sxsrf
           <span class="rating-number" style={"font-weight: 900;"}>4.9</span>
           <div class="stars">★★★★★</div>
         </div>
-        <a href={reviewLink} class="review-link" style={blackText ? "color: black;" : "color: white;"}>Read our 173 reviews</a>
+        <a href={reviewLink} class="review-link" target="_blank" style={blackText ? "color: black;" : "color: white;"}>Read our 173 reviews</a>
     </div>
 </div>
 <style>
@@ -60,5 +60,14 @@ const reviewLink = "https://www.google.com/search?sca_esv=98a71f72e401179b&sxsrf
     text-decoration: underline;
     font-size: 0.8rem;
     font-weight: 600;
+  }
+  @media (max-width: 480px) {
+    img{
+        width: 32px;
+        height: 32px;
+    }
+    .rating-number{
+        font-size: 0.8rem;
+    }
   }
 </style>
