--- a/src/components/reusable/YoutubeVideo.astro
+++ b/src/components/reusable/YoutubeVideo.astro
@@ -23,4 +23,10 @@ const { videoId, fullWidth = false }: Props = Astro.props;
         border:0;
         height: 100%;
     }
+    @media (max-width: 480px) {
+        .youtube-video-container{
+            width: 100%;
+            height: 15rem;
+        }
+    }
 </style>
