--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,6 +57,14 @@ const { title } = Astro.props;
 				cursor: pointer;
 			}
 
+			@media (max-width: 480px) {
+				.container{
+					max-width: 100%;
+					margin: 0 auto;
+					padding: 1rem 1rem;
+				}
+			}
+
 		</style>
 	</body>
 </html>
