--- a/src/components/Credentials.astro
+++ b/src/components/Credentials.astro
@@ -24,7 +24,7 @@ const images = [
     </div>
     <UnderlineHeader text="Better Results, Faster." />
     <div class="video-container">
-        <YoutubeVideo videoId="GrDl-8HyGBY" fullWidth={true}/>
+        <YoutubeVideo videoId="https://www.youtube.com/embed/GrDl-8HyGBY?si=NKO2Pq6y17rmeCQD" fullWidth={true}/>
     </div>
     <div class="book-an-appointment-container">
         <BookAnAppotiment />
