--- a/src/components/MainSection/MainSection.astro
+++ b/src/components/MainSection/MainSection.astro
@@ -10,7 +10,7 @@ import Ratings from "../reusable/Ratings.astro";
 <section class="main-section">
     <UnderlineHeader text="A quick walkthrough" />
     <div class="video-container">
-        <YoutubeVideo videoId="KehQPtPov_0" fullWidth/>
+        <YoutubeVideo videoId="https://www.youtube.com/embed/KehQPtPov_0?si=EBVNfxIueP3SdwoL" fullWidth/>
     </div>
     <div class="book-an-appointment-container">
         <BookAnAppotiment />
