--- a/src/components/reusable/BookAnAppotiment.astro
+++ b/src/components/reusable/BookAnAppotiment.astro
@@ -62,7 +62,7 @@ import personAvatar from '/public/avatars/person.png';
         color: white;
     }
 
-    @media (max-width: 480px) {
+    @media (max-width: 768px) {
         .book-an-appointment-header img{
             width: 20%;
             height: 20%;
@@ -78,6 +78,7 @@ import personAvatar from '/public/avatars/person.png';
         a{
             font-size: 0.6rem;
             padding: 0.5rem;
+            width: 40%;
         }
         
     }
