--- a/src/components/WhatElseWeOffer.astro
+++ b/src/components/WhatElseWeOffer.astro
@@ -112,4 +112,13 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
             margin-bottom: 0.5rem;
         }
     }
+    @media (max-width: 480px) {
+        .button-container{
+            display: flex;
+            justify-content: center;
+            margin:0 auto;
+            margin-top: 2rem;   
+            width: 70%;
+        }
+    }
 </style>
