--- a/src/components/reusable/BookAnAppotiment.astro
+++ b/src/components/reusable/BookAnAppotiment.astro
@@ -21,7 +21,7 @@ import personAvatar from '/public/avatars/person.png';
     }
     .book-an-appointment-header{
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         gap: 1rem;
         width: 100%;
@@ -78,8 +78,16 @@ import personAvatar from '/public/avatars/person.png';
         a{
             font-size: 0.6rem;
             padding: 0.5rem;
-            width: 40%;
         }
         
+    }
+    @media (max-width: 480px) {
+        .button-container{
+            width: 100%;
+            justify-content: space-between;
+        }
+        a{
+            font-size: 10px;
+        }
     }
 </style>
