Optimized lcp from 20s to 6s

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,7 +30,7 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
         z-index: 1;
     }
     .footer-container{
-        background-image: url('/footer_bg.jpg');
+        background-image: url('/hero_bg.webp');
         background-size: cover;
         background-position: center;
         display: flex;
