LCP is now 4-5s

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,9 +5,8 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
 ---
 <footer>
     <div class="footer-container">
-        <div class="overlay"></div>
         <div class="footer-content">
-            <Image src={clinicLogo} alt="Clinic Logo" loading="eager"/>
+            <Image src={clinicLogo} alt="Clinic Logo" loading="lazy"/>
             <p class="footer-text">
                 Get in touch with us and find out why
                 so many patients stay with us for years
@@ -20,15 +19,6 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
     </div>
 </footer>
 <style>
-    .overlay{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 1;
-    }
     .footer-container{
         background-image: url('/hero_bg.webp');
         background-size: cover;
