--- a/src/components/MainSection/MainSection.astro
+++ b/src/components/MainSection/MainSection.astro
@@ -20,7 +20,7 @@ import Ratings from "../reusable/Ratings.astro";
         Join So Many of Our Satisfied Clients Find out why our clients keep coming back.
     </span>
     <Reviews />
-    <Ratings blackText />
+    <Ratings blackText lazyLoad />
     <div class="book-an-appointment-container">
         <PrimaryButton text="Call us to book an appointment" href="tel:0280597743" centerText={true}/>
     </div>
