--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,8 @@
 ---
 import { Image } from 'astro:assets';
-import clinicLogo from '/public/logo/clinic27.webp';
 import PrimaryButton from './reusable/PrimaryButton.astro';
+import  clinicLogo from '/public/logo/clinic27.webp';
+
 ---
 <header class="header">
   <div class="container">
@@ -14,7 +15,7 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
   </div>
 </header>
 
-<style>
+<style is:inline>
   .header {
     background: white;
     width: 100%;
